--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,7 +365,7 @@ hr {
 @media screen and (max-width: 375px) {
     body {
         width: 100%;
-        height: 100%;
+        height: 812px;
     }
     .description1 {
         margin-top: 216vh;
