--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,12 +30,54 @@ header {
     flex-wrap: wrap;
 }
 
+.navRight>div:hover {
+    border-bottom: solid 1px #fff;
+    border-bottom-style: dashed;
+}
+
 .navRight>div {
     margin-right: 25px;
 }
 
 a {
     text-decoration: none;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 162px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    border: solid 1px #fff;
+    border-radius: 24px;
+    margin-top: 13px;
+    background-color: rgba(10, 36, 47, 0.95);
+}
+
+.dropdown-content a {
+    color: #fff;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #081d2a;
+}
+
+.projects {
+    display: inline-block;
+    position: relative;
+}
+
+.projects:hover {
+    cursor: pointer;
+}
+
+.show {
+    display: block;
 }
 
 .section-Top {
@@ -371,4 +413,108 @@ hr {
         margin-top: 216vh;
         margin-bottom: 98vh;
     }
+}
+
+#animations {
+    width: 776px;
+    height: 337px;
+}
+
+.sectionTitle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer {
+    display: flex;
+    background-color: #09141bc2;
+    height: 16vh;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contactMe {
+    width: 95%;
+    margin: auto;
+}
+
+.contactMe img {
+    height: 36px;
+    height: 29px;
+    margin-top: 6px;
+}
+
+.contactMe ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contactMe ul li {
+    list-style: none;
+    margin: 14px;
+    padding: 6px;
+}
+
+.contactMe ul li:hover {
+    list-style: none;
+    margin: 14px;
+    padding: 0px 6px 0px 6px;
+    border: solid 2px #ffff;
+    border-radius: 17px;
+}
+
+footer .txt {
+    width: 95%;
+    margin: auto;
+    display: flex;
+    justify-content: space-around;
+}
+
+.txt p {
+    margin-right: 130px;
+}
+
+.photoShopAnimation {
+    font-weight: 800;
+    font-size: 3.8em;
+    letter-spacing: 0.5em;
+}
+
+.photoShopAnimation .word {
+    display: inline-block;
+    line-height: 1em;
+}
+
+.Gifs {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.Gifs h3 {
+    font-size: 50px;
+}
+
+.header-gifs {
+    width: 95%;
+    margin: auto;
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-gifs p {
+    font-size: 12px;
+}
+
+.Gifs .separator-line {
+    height: 10px;
+    background-color: #fff;
+    border-radius: 5px;
+    width: 173px;
+    margin-bottom: 59px;
 }
