--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -564,3 +564,25 @@ footer .txt {
     width: 1077px;
     height: 567px;
 }
+
+.contentTwo div {
+    display: flex;
+    flex-flow: column;
+}
+
+.contentThree {
+    display: flex;
+    width: 90%;
+    margin: auto;
+}
+
+.contentThree img {
+    margin-left: 83px;
+    margin-top: 41px;
+    width: 695px;
+    height: 402px;
+}
+
+.contentThree div p {
+    margin-left: 83px;
+}
